# scuti

./: .gitignore  CMakeLists.txt  Cargo.toml
cmake/: Findrustc.cmake  Rust.cmake
src/: main.rs
src/core/: engine.rs
